<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/inGameHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:text="In-Game"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerNumTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="4dp"
        android:text="You are player {num}"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inGameHeader" />

    <Button
        android:id="@+id/turnBtn"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:layout_marginStart="220dp"
        android:layout_marginBottom="24dp"
        android:text="Take Turn"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayoutGame"
        android:layout_width="0dp"
        android:layout_height="470dp"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerNumTxt">

        <ImageView
            android:id="@+id/gameBoard"
            android:layout_width="wrap_content"
            android:layout_height="474dp"
            app:srcCompat="@drawable/sorryboard" />

        <ImageView
            android:id="@+id/yellowPiece1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="260dp"
            android:translationY="356dp"
            app:srcCompat="@drawable/yellowpiece" />

        <ImageView
            android:id="@+id/yellowPiece2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="260dp"
            android:translationY="356dp"
            app:srcCompat="@drawable/yellowpiece" />

        <ImageView
            android:id="@+id/yellowPiece3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="260dp"
            android:translationY="356dp"
            app:srcCompat="@drawable/yellowpiece" />

        <ImageView
            android:id="@+id/yellowPiece4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="260dp"
            android:translationY="356dp"
            app:srcCompat="@drawable/yellowpiece" />

        <ImageView
            android:id="@+id/greenPiece1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="20dp"
            android:translationY="284dp"
            app:srcCompat="@drawable/greenpiece" />

        <ImageView
            android:id="@+id/greenPiece2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="20dp"
            android:translationY="284dp"
            app:srcCompat="@drawable/greenpiece" />

        <ImageView
            android:id="@+id/greenPiece3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="20dp"
            android:translationY="284dp"
            app:srcCompat="@drawable/greenpiece" />

        <ImageView
            android:id="@+id/greenPiece4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="20dp"
            android:translationY="284dp"
            app:srcCompat="@drawable/greenpiece" />

        <ImageView
            android:id="@+id/redPiece1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="92dp"
            android:translationY="44dp"
            app:srcCompat="@drawable/redpiece" />

        <ImageView
            android:id="@+id/redPiece2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="92dp"
            android:translationY="44dp"
            app:srcCompat="@drawable/redpiece" />

        <ImageView
            android:id="@+id/redPiece3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="92dp"
            android:translationY="44dp"
            app:srcCompat="@drawable/redpiece" />

        <ImageView
            android:id="@+id/redPiece4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="92dp"
            android:translationY="44dp"
            app:srcCompat="@drawable/redpiece" />

        <ImageView
            android:id="@+id/bluePiece1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="332dp"
            android:translationY="116dp"
            app:srcCompat="@drawable/bluepiece" />

        <ImageView
            android:id="@+id/bluePiece2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="332dp"
            android:translationY="116dp"
            app:srcCompat="@drawable/bluepiece" />

        <ImageView
            android:id="@+id/bluePiece3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="332dp"
            android:translationY="116dp"
            app:srcCompat="@drawable/bluepiece" />

        <ImageView
            android:id="@+id/bluePiece4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:translationX="332dp"
            android:translationY="116dp"
            app:srcCompat="@drawable/bluepiece" />

        <TextView
            android:id="@+id/pieceNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="24sp"
            android:textStyle="bold"
            android:translationX="35dp"
            android:translationY="60dp" />

        <TextView
            android:id="@+id/pieceNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/pieceNum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3"
            android:textStyle="bold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/pieceNum4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4"
            android:textStyle="bold"
            android:textSize="24sp" />

    </FrameLayout>

    <Button
        android:id="@+id/gameBackBtn"
        android:layout_width="88dp"
        android:layout_height="63dp"
        android:text="Quit"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/drawBtn"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:layout_marginEnd="28dp"
        android:text="Draw Card"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/turnBtn"
        app:layout_constraintEnd_toStartOf="@+id/turnBtn" />

    <CheckBox
        android:id="@+id/checkBoxPiece1"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:text="Piece 1"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxPiece2"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxPiece2"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:text="Piece 2"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxPiece3"
        app:layout_constraintStart_toEndOf="@+id/checkBoxPiece1" />

    <CheckBox
        android:id="@+id/checkBoxPiece3"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:text="Piece 3"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxPiece4"
        app:layout_constraintStart_toEndOf="@+id/checkBoxPiece2" />

    <CheckBox
        android:id="@+id/checkBoxPiece4"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="Piece 4"
        app:layout_constraintStart_toEndOf="@+id/checkBoxPiece3"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutGame" />

    <TextView
        android:id="@+id/drawnValText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:text="You Drew A (Num)"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutGame" />

</androidx.constraintlayout.widget.ConstraintLayout>