<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/shopList"
        android:layout_width="382dp"
        android:layout_height="394dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/shopBackBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respondText"
        app:layout_constraintVertical_bias="0.0">

    </ListView>

    <TextView
        android:id="@+id/shop_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/aldrich"
        android:text="Shop:"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shopBackBtn"
        android:layout_width="213dp"
        android:layout_height="77dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="48dp"
        android:text="Back"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/respondText"
        android:layout_width="253dp"
        android:layout_height="31dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="24dp"
        android:text="blank"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_text" />

    <Button
        android:id="@+id/shopInventoryBtn"
        android:layout_width="213dp"
        android:layout_height="77dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="12dp"
        android:text="Inventory"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/shopBackBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bankValTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="Bank: {bal}"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopList" />
</androidx.constraintlayout.widget.ConstraintLayout>