<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/InventoryHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aldrich"
        android:text="Inventory:"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listview_equipped"
        android:layout_width="348dp"
        android:layout_height="181dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InventoryHeader" />

    <Button
        android:id="@+id/inventoryBtn"
        android:layout_width="205dp"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="Back"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView_inventory" />

    <ListView
        android:id="@+id/listView_inventory"
        android:layout_width="344dp"
        android:layout_height="222dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview_equipped" />

    <TextView
        android:id="@+id/equippedTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="Equipped Items:"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/listview_equipped"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/inventoryItemTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:text="Inventory Items:"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/listView_inventory"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/equip_unequip_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="8dp"
        android:text="Item Unequipped"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InventoryHeader" />
</androidx.constraintlayout.widget.ConstraintLayout>